--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,42 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Kyuni studio productions"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- <meta name="theme-color" content="#000000" /> -->
+    <meta name="description" content="Kyuni studio productions" />
+    <meta name="Author" contents="">
+
+    <!-- <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" /> -->
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- Bootstrap predefined stylesheet -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
+
+    <!-- Custom fonts & favicon -->
+    <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:ital,wght@0,400;1,700&display=swap" rel="stylesheet" />
+    <link rel="icon" href="./imgs/favicon.ico" type="image/gif" />
+
+    <!-- Custom stylesheet -->
+    <link rel="stylesheet" href="./assets/css/style.css" />
+
     <title>KyuniStduios - The Voice Magnet</title>
   </head>
-  <body>
+  <body id="page-up bg-color" data-spy="scroll" data-target=".navbar" data-offset="50">
+
+    <!-- If JS is disabled -->
     <noscript>You need to enable JavaScript to run this app.</noscript>
+
+    <!-- Bundled script -->
     <div id="root"></div>
+
+    <!-- Bootstrap predefined script -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+    <!-- Custom jQuery script -->
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
